<resources>
    <string name="app_name">Shake SDK demo app</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_invocations">Shake SDK is invoked with</string>
    <string name="invocation_shaking">Shaking</string>
    <string name="invocation_screenshot">Taking a screenshot</string>
    <string name="invocation_button">Floating button</string>

    <string name="settings_contains">Shake SDK form contains</string>
    <string name="contains_feedback_type">Feedback type picker</string>
    <string name="contains_email">Email field</string>
    <string name="contains_inspect">Inspect button</string>

    <string name="settings_data">Data</string>
    <string name="data_screenshot">Attach screenshot automatically</string>

    <string name="settings_bottom_text">The customizations are simple so you get the idea. Visit www.shakebugs.com/docs to read how to tweak dozens of things to your needs: From custom logs and variables to managing sensitive data.</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">SDK settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="try_this">Now try this ✨</string>
    <string name="welcome_try_this_1">Shake your phone → write anything and tap Submit</string>
    <string name="welcome_try_this_2">On your computer visit <a href="https://shk.sh/demo">shk.sh/demo</a> to see how your submitted ticket looks like. Shake SDK has attached all that data automatically!</string>
    <string name="customize_try_this_1">Tap  ⋮  in the top right corner → SDK settings → change a thing or two</string>
    <string name="customize_try_this_2">Invoke Shake to see how it has changed</string>
    <string name="crash_try_this_1">Tap me to crash this app for fun</string>
    <string name="crash_try_this_2">On your computer visit shk.sh/demo to see how your crash report looks like. Shake SDK has attached all that data   automatically !</string>

    <string name="welcome_title">Welcome to Shake demo app</string>
    <string name="learn_more">To learn about Shake, visit <a href="https://www.shakebugs.com/?utm_source=android_demo_app">shakebugs.com</a></string>
    <string name="welcome_description">This Demo app is a playground where you can try what Shake SDK can do, withoout having to add it to your app.</string>
    <string name="welcome_bottom_text">Add Shake SDK to your internal app build and distribute it to your team, or a client. Whenever they notice a bug → they can just shake the phone to report a perfect bug in a few seconds &amp; without leaving your app.</string>
    <string name="welcome_bottom_text_2">For more ideas, visit the  navbar ☰ in the top left corner.</string>

    <string name="customize_title">Customize SDK 🎛</string>
    <string name="customize_description">Shake works as soon as you add it to your app. But you can customize it too: How it\'s invoked, its form fields, data etc.</string>
    <string name="customize_bottom_text">The customizations are simple so you get the idea. Visit www.shakebugs.com/docs to read how to tweak dozens of things to your needs: From custom logs and variables to managing sensitive data.</string>

    <string name="crash_title">Crash reporting 💥</string>
    <string name="crash_description">Shake SDK can also be on the lookout for fatal errors and ask your users to describe what happened. Just as with Tickets, Crash reports will be packed with data about the device, usage and user.</string>
    <string name="crash_bottom_text">On the web Dashboard, navigate to the Crashes product in the left navigation bar and find your crash. It will be mixed with others\' crashes.</string>

    <string name="feedback_title">Feedback center 🧑‍💻</string>
    <string name="feedback_description">Use Shake SDK in your production app as a fully fledged support center.</string>
    <string name="feedback_learn_more">For example, turn off the default shaking gesture and add Shake to your "Settings" or "My account" screen</string>
    <string name="feedback_my_account">My Account</string>
    <string name="feedback_notification">Notifications</string>
    <string name="feedback_theme">Theme</string>
    <string name="feedback_feedback">Feedback</string>
    <string name="feedback_feedback_description">Make suggestions or report issues</string>
    <string name="feedback_password">Change password</string>
    <string name="feedback_sign_out">Sign out</string>

</resources>