<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/shake_color_primary">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/shake_Headline1"
        android:paddingBottom="10dp"
        android:text="@string/action_settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/settings_invocations"
            style="@style/shake_Subtitle3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="22dp"
            android:paddingVertical="6dp"
            android:orientation="vertical"
            android:background="@drawable/shake_component_panel_bg">
            <LinearLayout
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_layout_height">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/invocation_shaking" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_shaking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_layout_height">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/shaking_threshold" />

                <SeekBar
                    android:id="@+id/settings_shaking_threshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="1"
                    android:max="1000" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_layout_height">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/invocation_screenshot" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_screenshot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_layout_height">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/invocation_button"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/settings_contains"
                style="@style/shake_Subtitle3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="22dp"
                android:paddingVertical="6dp"
                android:orientation="vertical"
                android:background="@drawable/shake_component_panel_bg">
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_layout_height">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/contains_feedback_type" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/settings_feedback_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_layout_height">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/contains_email" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/settings_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_layout_height">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/contains_inspect"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/settings_inspect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/settings_data"
                style="@style/shake_Subtitle3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="22dp"
                android:paddingVertical="6dp"
                android:orientation="vertical"
                android:background="@drawable/shake_component_panel_bg">
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_layout_height">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/data_screenshot" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/settings_attachment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_bottom_text"
        android:autoLink="web"
        android:textColorLink="@color/link_color"
        style="@style/shake_Subtitle1" />

    </LinearLayout>

</ScrollView>