<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcoome_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-25dp"
        tools:layout_editor_absoluteY="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/shake_Headline1"
            android:text="@string/welcome_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title">

            <TextView
                android:id="@+id/welcome_learn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/learn_more"
                android:textColorLink="@color/link_color"
                style="@style/shake_Subtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/shake_Subtitle1"
                android:paddingTop="10dp"
                android:text="@string/welcome_description"
                app:layout_constraintTop_toBottomOf="@+id/welcome_learn_more"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_try_this_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcoome_top_layout">

        <TextView
            android:id="@+id/welcome_try_this"
            style="@style/shake_Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/try_this"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shake_component_panel_bg"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_try_this">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/welcome_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                tools:listitem="@layout/fragment_step" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcome_bottom_description"
        android:layout_width="wrap_content"
        android:paddingTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bottom_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_try_this_layout"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/shake_Subtitle1"/>

    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bottom_text_2"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bottom_description"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/shake_Subtitle1"/>

</androidx.constraintlayout.widget.ConstraintLayout>